--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^8.1",
         "ext-intl": "*",
         "ext-mbstring": "*",
+        "ccantimbuhan/ci-filters": "dev-dev",
         "laminas/laminas-escaper": "^2.14",
         "psr/log": "^3.0"
     },
@@ -62,5 +63,11 @@
     },
     "scripts": {
         "test": "phpunit"
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/ci-filters"
+        }
+    ]
 }
